RestartUtil: argument-list relaunch via ProcessBuilder (stock restart never relaunched)
The live two-hop migration surfaced it: hop 2 (res-only self-heal) applied
cleanly but the app exited without reopening. Stock RestartUtil builds one
command STRING for Runtime.exec(String), which tokenizes on whitespace and
honors no quoting - the quoted java binary never exec'd on Linux, and any
install path with a space (the field case: '.../Forge Fork/') split
mid-path, with the failure swallowed inside the shutdown hook. Same defect
class as the delta-URL encoding bug, one layer down. Hop 1 relaunched only
because UpdateApplier already used a ProcessBuilder argument list.

Rebuilt: command is a List<String> through ProcessBuilder; jar launches
derive the jar path from the code source (the one space-safe source) with
trailing program args recovered past the jar filename; classes launches
keep the old parse (class names are dotted identifiers, never paths -
anything path-shaped in token 0 means an unreconstructible command, so
refuse and return false rather than relaunch garbage). Serves both call
sites: the mobile-dev adapter (delta updater, settings restarts) and the
desktop Swing client's restartForge.

RestartUtilTest 4 new; DeltaUpdateTest still 10/10.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>